- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.5.x
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.x

Breaking Changes:
- close_popup: Now requires the name of the popup to be added.


-----------------------------------------------------------------------
 VERSION 0.5.53
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.53

Updates:
- ImGui:           	Upgraded to v1.79
- ImGuiFileDialog: 	Upgraded to v0.5.1
- Python:           Added python 3.9 support

Fixes:
- start_dearpygui:     	Is now protected from trying to create a new dearpygui instance before closing the last one issue #289
- workspace switching:  Fixed workspace switching causing crashes #256
- show_metrics:         Fixed show_metrics warning/exception #293

-----------------------------------------------------------------------
 VERSION 0.5.0 (10/20/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.0

Breaking Changes:
- show_source: "show_source" removed to prepare for text editor widget in 0.6

Updates:
- Standard Windows: metrics/debug/about/style/docs etc. are truely widgets now.
- MacOs:            minimum now Mojava

New Commands:
- Misc: Added "set_managed_column_width" command
- Misc: Added "get_managed_column_width" command
- Misc: Added "add_character_remap" command
- Misc: Added "set_primary_window" command
- Misc: Added "add_metrics_window" command
- Misc: Added "add_debug_window" command
- Misc: Added "add_about_window" command
- Misc: Added "add_style_window" command
- Misc: Added "add_documentation_window" command

New Keywords:
- start_dearpygui:    Added "primary_window" keyword
- add_checkbox:		  Added "enabled" keyword