@@ -31,6 +31,10 @@ Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.x
 Breaking Changes:
 - close_popup: Now requires the name of the popup to be added.
 
+Fixes:
+- primary window: Fixed issue in which primary window messed up other window
+                  settings and flags
+
 
 -----------------------------------------------------------------------
  VERSION 0.5.53
